@@ -7,6 +7,7 @@
 	- scan only for media info if file has supported extension
 	- identical media name check at addialog fixed
 	- identical media name check for cd/dvd added
+	- skip mount cd/dvd if already mounted is detected (via /etc/mtab)
 
 27. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
 	- allow gui often to refresh
